--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disaster Girl</title>
+    <title>I Hate Wrike</title>
     <style>
         body {
             display: flex;
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/en/1/11/Disaster_Girl.jpg" alt="Disaster Girl" width="400">
+    <img src="https://upload.wikimedia.org/wikipedia/en/1/11/Disaster_Girl.jpg" alt="Disaster Girl" width="800">
     <h2>Brought to you by: Hold My Beer, Stefan's Sticky Notes, and THE Kristijan</h2>
 </body>
 </html>
